# ssz-palette

./: .gitignore  LICENSE  README.md  SSZ Palette in Matplotlib.ipynb  pyproject.toml
docs/: example.html
sszpalette/: __init__.py
